# SSHield

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ssh_manager.rs  telnet_guard.rs  telnet_terminal.rs  vulnerability_scanner.rs
src/components/: ConnectPanel.tsx  GuidedPatchWizard.tsx  PatchLog.tsx  ScanPanel.tsx  TelnetTerminalPanel.tsx  TerminalPanel.tsx
src/types/: index.ts
