[package]
name = "ssh-patch-manager"
version = "0.1.0"
description = "SSH Vulnerability Patch Manager"
authors = []
license = ""
repository = ""
default-run = "ssh-patch-manager"
edition = "2021"
rust-version = "1.70"

[lib]
name = "ssh_patch_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ssh-patch-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
